更新app错误提示以及添加本地日志功能