@@ -1,5 +1,7 @@
 package com.example.jimi.in_outstock.fragment;
 
+import android.annotation.SuppressLint;
+import android.content.Intent;
 import android.os.Bundle;
 import android.os.Handler;
 import android.os.Message;
@@ -11,7 +13,9 @@ import android.support.v4.view.ViewPager;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
+import android.widget.TextView;
 
+import com.example.jimi.in_outstock.activity.LoginActivity;
 import com.example.jimi.in_outstock.activity.R;
 import com.example.jimi.in_outstock.adpater.TaskItemViewPagerAdapter;
 import com.example.jimi.in_outstock.application.MyApplication;
@@ -27,14 +31,34 @@ import java.util.ArrayList;
 @ContentView(R.layout.fragment_history)
 public class HistoryFragment extends Fragment {
 
+    //成功
+    private static final int SUCCESS_NUM = 200;
+    //网络异常(自定义)
+    private static final int NETWORK_NUM = 0;
+    //权限不足
+    private static final int ACCESS_NUM = 401;
+    //服务器内部错误
+    private static final int SERVER_NUM = 500;
+    //未知错误
+    private static final int UNKNOW_NUM = 666666;
+
     @ViewInject(R.id.viewPager_history_task)
     public ViewPager viewPager_task;
+    @ViewInject(R.id.tv_no_network)
+    private TextView tv_no_network;
+    @ViewInject(R.id.tv_tasklist)
+    private TextView tv_tasklist;
+    @ViewInject(R.id.bar_line)
+    private TextView bar_line;
+
+
     public  ArrayList<Fragment> fragments =new ArrayList<>();
     public FragmentManager fragmentManager;
     private ArrayList<TaskInfo> historyTaskInfos;
     private ArrayList<String> titleList = new ArrayList<>();
     private TaskInfo taskInfo;
     public TaskItemViewPagerAdapter taskItemViewPagerAdapter;
+
 
     // 还未完成的任务条目的位置
     private ArrayList<Integer> positions = new ArrayList<>();
@@ -51,22 +75,52 @@ public class HistoryFragment extends Fragment {
     /**
      * 发送http请求并根据回复刷新界面
      */
+    @SuppressLint("HandlerLeak")
     public void update() {
         GetWindowTaskItemEvent getWindowTaskItem = new GetWindowTaskItemEvent();
         getWindowTaskItem.setWindowId(MyApplication.getWindowId());
         getWindowTaskItem.setHandler(new Handler(){
             public void handleMessage(Message msg) {
-                ArrayList<TaskInfo> historyTaskInfos = (ArrayList<TaskInfo>) msg.obj;
-                if(historyTaskInfos !=null && historyTaskInfos.size()>0){
-                    MyApplication.setHistoryTaskInfos(historyTaskInfos);
-                    refleshFragment();
-                }else{
+                int code = msg.what;
+                if (code == SUCCESS_NUM) {
+                    tv_no_network.setText("");
+                    tv_no_network.setVisibility(View.GONE);
+                    tv_tasklist.setVisibility(View.GONE);
+                    bar_line.setVisibility(View.GONE);
+                    viewPager_task.setVisibility(View.VISIBLE);
+                    ArrayList<TaskInfo> historyTaskInfos = (ArrayList<TaskInfo>) msg.obj;
+                    if (historyTaskInfos != null && historyTaskInfos.size() > 0) {
+                        MyApplication.setHistoryTaskInfos(historyTaskInfos);
+                        refleshFragment();
+                    } else {
+                        initFragment();
+                    }
+                }else if(code == NETWORK_NUM){
                     initFragment();
+                    hideAndShow();
+                    tv_no_network.setText("网络异常，无法连接服务器\n请点击页面重新刷新");
+                    handler.removeCallbacks(runnable);
+                }else if(code == ACCESS_NUM){
+                    initFragment();
+                    hideAndShow();
+                    tv_no_network.setText("权限不足，请点击重新登录");
+                    handler.removeCallbacks(runnable);
+                }else if(code == SERVER_NUM){
+                    initFragment();
+                    hideAndShow();
+                    tv_no_network.setText("服务器内部错误，请点击页面重新刷新");
+                    handler.removeCallbacks(runnable);
+                }else {
+                    initFragment();
+                    hideAndShow();
+                    tv_no_network.setText("未知错误，请点击页面重新刷新");
+                    handler.removeCallbacks(runnable);
                 }
             }
         });
         getWindowTaskItem.startGetWindowTaskItemThread();
     }
+
 
     @Override
     public void onHiddenChanged(boolean hidden) {
@@ -88,10 +142,29 @@ public class HistoryFragment extends Fragment {
         super.onActivityCreated(savedInstanceState);
         viewPager_task.setPageMargin(10);
         initFragment();
+        tv_no_network.setVisibility(View.GONE);
+        tv_tasklist.setVisibility(View.GONE);
+        bar_line.setVisibility(View.GONE);
+        tv_no_network.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View view) {
+                String text = tv_no_network.getText().toString();
+                if (text.contains("请点击页面重新刷新")){
+                    tv_no_network.setText("正在刷新，请稍后");
+                    handler.postDelayed(runnable,1000);
+                }else if(text.contains("请点击重新登录")){
+                    Intent intent = new Intent(MyApplication.getContext(), LoginActivity.class);
+                    intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+                    MyApplication.getContext().startActivity(intent);
+                }
+            }
+        });
         handler.postDelayed(runnable, 0);
     }
 
     public void refleshFragment(){
+        tv_no_network.setText("");
+        tv_no_network.setVisibility(View.GONE);
         MyApplication.setPosition(-1);
         historyTaskInfos = MyApplication.getHistoryTaskInfos();
         fragmentManager = getChildFragmentManager();
@@ -114,7 +187,7 @@ public class HistoryFragment extends Fragment {
                 fragment.setTaskInfo(historyTaskInfos.get(i));
                 finish_Fragments.add(fragment);
             }
-            Integer j = new Integer(i+1);
+            Integer j = Integer.valueOf(i+1);
             titleList.add(("任务-"+j.toString()));
         }
         //将已完成的刚在前面，未完成的放在后面
@@ -133,27 +206,9 @@ public class HistoryFragment extends Fragment {
      * 加载数据
      */
     public void initFragment(){
+        tv_no_network.setText("");
+        tv_no_network.setVisibility(View.GONE);
         MyApplication.setPosition(-1);
-        /*historyTaskInfos = MyApplication.getHistoryTaskInfos();
-        fragmentManager = getChildFragmentManager();
-        for(int i=0;i<historyTaskInfos.size();i++){
-            // 判断完成时间是否为no
-            if("no".equals(historyTaskInfos.get(i).getFinishTime())){
-                positions.add(i);
-                NowTaskFragment fragment = new NowTaskFragment();
-                fragment.setTaskInfo(historyTaskInfos.get(i));
-                fragments.add(fragment);
-            }else{
-                TaskFragment fragment = new TaskFragment();
-                fragment.setTaskInfo(historyTaskInfos.get(i));
-                fragments.add(fragment);
-            }
-        }
-        // 获取第一个未完成任务条目的位置
-        if(positions.size()>0){
-            MyApplication.setPosition(positions.get(0));
-            taskInfo = historyTaskInfos.get(MyApplication.getPosition());
-        }*/
         fragmentManager = getChildFragmentManager();
         fragments.clear();
         titleList.clear();
@@ -164,4 +219,18 @@ public class HistoryFragment extends Fragment {
         viewPager_task.setCurrentItem(MyApplication.getPosition());
     }
 
+    private void hideAndShow(){
+        viewPager_task.setVisibility(View.GONE);
+        tv_no_network.setVisibility(View.VISIBLE);
+        tv_tasklist.setVisibility(View.VISIBLE);
+        bar_line.setVisibility(View.VISIBLE);
+        tv_no_network.bringToFront();
+        tv_tasklist.bringToFront();
+        bar_line.bringToFront();
+    }
+    @Override
+    public void onDestroy() {
+        handler.removeCallbacks(runnable);
+        super.onDestroy();
+    }
 }
